--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <article class="d-flex">
                     <!--Img-->
                         <span class="w-50">
-                            <img class="w-100" src="./img/PrimeiraImg.webp" alt="Primeira Img">
+                            <img class="w-100" src="./img/primeiraimg.webp" alt="Primeira Img">
                         </span>
                     <!--Img-->
                     <!--Texto-->
@@ -102,28 +102,32 @@
                                                 <br>
                                                 <!-- Legenda -->
                                                 <span style="color: var(--bs-white);font-family: OpenSans-Light; font-size: 1.2rem;">
-                                                    <p>Somos sempre demandados para exercermos as </p>     
-                                                    <p>nossas capacidades de resiliência e adaptabilidade.</p>     
-                                                    <p>Em nosso dia a dia, é comum nos depararmos com </p>     
-                                                    <p>desafios, necessidades de superarmos os nossos </p>     
-                                                    <p>medos, nossas angústias, nossos  receios ou nossas</p>     
-                                                    <p>inseguranças ou enfrentarmos contextos nos quais </p>    
-                                                    <p>temos que exercer novas funções, mudar as nossas </p>    
-                                                    <p>perspectivas ou realizar uma autocritica frentea </p>     
-                                                    <p>informações ou perspectivas diferentes. Por exemplo,</p>     
-                                                    <p>no âmbito universitário, vimos como estudantes e</p>     
-                                                    <p>professores enfrentaram os impactos da pandemia: aulas online, isolamento social e mudanças, abruptas</p>     
-                                                    <p>formas de estudo/ensino e muitos tiveram que se</p>     
-                                                    <p>adaptar rapidamente, equilibrando responsabilidades </p>     
-                                                    <p>acadêmicas e pessoais e profissionais.</p>     
+                                                    <p>Para começar nossa conversa sobre resiliência, </p>     
+                                                    <p>apresentamos dois exemplos recentes. Primeiro, no</p>     
+                                                    <p>âmbito universitário, vemos estudantes que </p>     
+                                                    <p>enfrentaram o impacto da pandemia: aulas on-line, </p>     
+                                                    <p>isolamento social e mudanças constantes nas </p>     
+                                                    <p>avaliações. Muitos tiveram de se adaptar </p>    
+                                                    <p>rapidamente, equilibrando responsabilidades </p>    
+                                                    <p>acadêmicas e pessoais. No mercado de trabalho, um</p>     
+                                                    <p>exemplo marcante foi o setor de tecnologia, no qual</p>     
+                                                    <p>profissionais enfrentaram ciclos rápidos de inovação</p>     
+                                                    <p>e pressão para aprender sobre novas tecnologias</p>     
+                                                    <p>enquanto lidavam com cenários de instabilidade </p>     
+                                                    <p>resiliência e adaptação foram essenciais para navegar</p>     
+                                                    <p>por esses desafios.</p>     
                                                         <br>
-                                                    <p>No mercado de trabalho, um exemplo marcante foi o</p>
-                                                    <p>setor de tecnologia, no qual profissionais enfrentaram</p>
-                                                    <p>ciclos rápidos de inovação e pressão para aprender </p>
-                                                    <p>sobre novas tecnologias enquanto lidavam com  </p>
-                                                    <p>cenários de instabilidade econômica. Em ambos os</p>
-                                                    <p>casos, as capacidades de resiliência e adaptação</p>
-                                                    <p> foram essenciais para navegar por esses desafios.</p>
+                                                    <p>Nas ciências da natureza (a Física, por exemplo)</p>
+                                                    <p>“resiliência” é a capacidade de um material retornar à </p>
+                                                    <p>sua forma original após sofrer uma deformação, como</p>
+                                                    <p>uma mola que, ao ser pressionada, volta ao estado</p>
+                                                    <p>inicial. Quando nos voltamos ao mundo profissional, </p>
+                                                    <p>podemos pensar na resiliência como essa mesma </p>
+                                                    <p>habilidade, mas com relação às adversidades e </p>
+                                                    <p>pressões, ou seja, a capacidade de um indivíduo ou </p>
+                                                    <p>uma equipe enfrentar pressões, mudanças ou desafios, </p>
+                                                    <p>e de se reconstituir, muitas vezes mais forte(s) e </p>
+                                                    <p>preparado(s) para os próximos desafios.</p>
                                                         <br>
                                                     <p>Nas ciências da natureza (a Física, por exemplo)</p>
                                                     <p>“resiliência”é a capacidade de um material </p>
