--- a/index.html
+++ b/index.html
@@ -129,34 +129,21 @@
                                                     <p>e de se reconstituir, muitas vezes mais forte(s) e </p>
                                                     <p>preparado(s) para os próximos desafios.</p>
                                                         <br>
-                                                    <p>Nas ciências da natureza (a Física, por exemplo)</p>
-                                                    <p>“resiliência”é a capacidade de um material </p>
-                                                    <p>retornar à sua forma original após sofrer uma </p>
-                                                    <p>deformação, como uma mola que, ao ser pressionada,</p>
-                                                    <p> volta ao estado inicial. Quando nos voltamos ao</p>
-                                                    <p>mundo profissional,podemos pensar na resiliência</p>
-                                                    <p> como essamesma habilidade, mas com relação às</p>
-                                                    <p> adversidades e, pressões ou seja, a capacidade de </p>
-                                                    <p>um indivíduo ou uma equipe enfrentar  pressões, </p>
-                                                    <p>mudanças ou desafios, ede se reconstituir, muitas </p>
-                                                    <p>vezes  mais forte(s) e preparado(s) para os próximos desafios.</p>
+                                                    <p>Assim, podemos tomar a palavra “resiliência” como a </p>
+                                                    <p>habilidade de lidar com situações adversas, </p>
+                                                    <p>adaptando-se as mudanças e mantendo a </p>
+                                                    <p>produtividade, a motivação e o equilíbrio emocional</p>
+                                                    <p>No mundo atual, que chamamos de VUCA – Volátil,</p>
+                                                    <p>Incerto, Complexo e Ambíguo –, essa habilidade é </p>
+                                                    <p>mais relevante do que nunca. Transformações</p>
+                                                    <p>tecnológicas, mudanças rápidas no mercado e crises</p>
+                                                    <p>inesperadas exigem profissionais que consigam se </p>
+                                                    <p>adaptar e prosperar em meio às incertezas. Como uma</p>
+                                                    <p>soft skill, a resiliência se destaca porque é a base para</p>
+                                                    <p>a superação de problemas, a colaboração e a inovação</p>
+                                                    <p>em momentos de pressão.</p>
                                                         <br>
-                                                    <p>Assim, podemos tomar as capacidades de “resiliência </p>
-                                                    <p>e adaptabilidade” como saber lidar com situações </p>
-                                                    <p>adversas, adaptando-se as mudanças e mantendo a</p>
-                                                    <p>motivação e o equilíbrio emocional. No mundo atual, </p>
-                                                    <p>que produtividade, a chamamos de VUCA – Volátil,</p>
-                                                    <p>Incerto, Complexo e Ambíguo –,essa habilidade é </p>
-                                                    <p>mais relevante do que nunca.Transformações </p>
-                                                    <p>tecnológicas, mudanças rápidas no mercado e</p>
-                                                    <p>exigem profissionais que consigam se adaptar e </p>
-                                                    <p>prosperar crises inesperadas em meio às incertezas. </p>
-                                                    <p>Como soft skill , a resiliência e adaptabilidade </p>
-                                                    <p>se destacam porque são a base para a superação </p>
-                                                    <p>de problemas, rápida adequação as mudanças </p>
-                                                    <p>repentinas, além de possibilitarem a colaboração e a inovação em momentos de pressão.</p>
-                                                        <br>
-                                                </span>
+                                                    </span>
                                                 <!--Legenda-->
                                             </div>
                                         </div>
