--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </section>
         <!--Primeiro Carrosel-->
         <!-- Segundo Carrossel-->
-            <section style="background: var(--Bs-Secundario);" class="container-xxl">
+            <section style="background: var(--bs-terciaria);" class="container-xxl">
                 <article class="d-flex">
                     <!-- Imagem -->
                     <span class="w-50">
@@ -233,7 +233,7 @@
                                                 <!--Introdução-->
                                                     <br>
                                                 <!-- Legenda -->
-                                                    <span style="font-family: OpenSans-Light; font-size: 1.2rem;">
+                                                    <span style="font-family: OpenSans-Light; font-size: 1.2rem;color: var(--color-Secundaria);">
                                                         <p >Já pudemos compreender o quanto Resiliência a</p>     
                                                         <p>Adaptabilidade são habilidades importantes em</p>     
                                                         <p>nossas vidas. A partir de agora, abordaremos ambas</p>     
@@ -241,13 +241,14 @@
                                                         <p>publicações que abordam as temáticas dessas</p>     
                                                         <p>habilidades, entre estas, destacamos o livro</p>    
                                                         <p>“Resilience: 10 habits to sustain high performance”,</p>    
-                                                        <p>do escritor e renomado empresário Jo Owen.</p>   
-                                                            <br>
+                                                        <p>do escritor e renomado empresário Jo Owen.</p>
                                                         <p>Nesse livro, o autor apresenta exemplos diversos de</p>
                                                         <p>resiliência e adaptabilidade ao longo de todo o</p>
-                                                        <p>mundo. Um desses exemplos é o das cidades</p>
-                                                        <p>japonesas Tsubame e Sanjo, nas quais podemos ver</p>
-                                                        <p>como ambiente pode impulsionar as nossas capacidades de resiliência</p>
+                                                        <p>mundo.</p>
+                                                            <br>
+                                                        <p>Um desses exemplos é o das cidades japonesas</p>
+                                                        <p> Tsubame e Sanjo, nas quais podemos ver como</p>
+                                                        <p> ambiente pode impulsionar as nossas capacidades de resiliência</p>
                                                             <br>
                                                         <p>Tsubame e Sanjo são duas cidades japonesas que  </p>
                                                         <p>competem no mundo da metalurgia. Como ele mesmo </p>
@@ -258,10 +259,11 @@
                                                         <p>aprendizado conjunto entre os mestres artesãos,</p>
                                                         <p>com trocas de ideias e competição entre si, o que</p>
                                                         <p>acaba promovendo o aprimoramento dos talentos</p>
-                                                        <p>das novas gerações. O que poderia levar a um</p>
+                                                        <p>das novas gerações. </p>
+                                                            <br>
+                                                        <p>O que poderia levar a um</p>
                                                         <p>ambiente hostil de competição e pouca interação</p>
                                                         <p>entre os pares, nos surpreende</p>
-                                                            <br>
                                                         <p>A máxima de Owen é: “O lugar não dita o seu destino,</p>
                                                         <p> mas ajuda a moldá-lo”. Por meio desse exemplo, </p>
                                                         <p>podemos compreender como um ambiente de pressão </p>
@@ -293,7 +295,7 @@
                                         <div class="w-100 d-flex justify-content-center flex-column align-items-center">
                                             <div style="max-height: 400px; overflow-y: auto; padding: 10px; width: 78%;">
                                                 <!-- Legenda -->
-                                                    <span style="font-family: OpenSans-Light; font-size: 1.2rem;">
+                                                    <span style="font-family: OpenSans-Light; font-size: 1.2rem; color: var(--color-Secundaria);">
                                                         <p>Para ilustrar melhor os conceitos resiliência e </p>     
                                                         <p>adaptabilidade, ouça o podcast a seguir com a </p>     
                                                         <p>participação de uma especialista em gestão de </p>     
