--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             </section>
         <!-- Segundo Carrossel-->   
         <!--Terceiro Carrosel Atividade-->
-            <section style="background: var(--bs-terciaria);" class="container-xxl">
+            <section style="background: var(--Bs-primaria);" class="container-xxl">
                 <article class="d-flex">
                     <!-- Carrossel -->
                         <span class="w-50 d-flex justify-content-center align-items-center">
@@ -565,14 +565,14 @@
                     <!-- Carrossel -->
                     <!-- Img -->
                         <span class="w-50">
-                            <img class="w-100" src="./img/QuartaImg.webp" alt="Primeira Img">
+                            <img class="w-100" src="./img/atividade04.webp" alt="Primeira Img">
                         </span>
                     <!-- Img -->
                 </article>
             </section>
         <!--Terceiro Carrosel Atividade--> 
         <!--Container 02-->
-            <section style="background: var(--bs-Quarta);" class="container-xxl ">
+            <section style="background: var(--Bs-Secundario);" class="container-xxl ">
                 <article class="d-flex">
                     <!--Img-->
                         <span class="w-50">
@@ -581,7 +581,7 @@
                     <!--Img-->
                     <!-- Texto -->
                         <div class="w-50 d-flex justify-content-center flex-column align-items-center">
-                            <div style="max-height: 400px; overflow-y: auto; padding: 10px; width: 78%;">
+                            <div style="max-height: 600px; overflow-y: auto; padding: 10px; width: 78%;">
                                 <!--Titulo-->
                                     <span style="gap: 1.5rem;" class="d-flex">
                                         <!--icons-->
@@ -592,7 +592,7 @@
                                         <!-- Título -->
                                         <br><br>
                                             <div style="width: 35% !important;" class="d-flex justify-content-end align-items-end" >
-                                                <h4  style="color: var(--color-Secundaria); background: url(./img/icons/pleca1.webp); background-size: cover;font-family: PlayfairDisplay-Regular; background-position: center; font-size: 2rem; width: 150% !important;">
+                                                <h4  style="color: var(--color-primaria); background: url(./img/icons/pleca1.webp); background-size: cover;font-family: PlayfairDisplay-Regular; background-position: center; font-size: 2rem; width: 150% !important;">
                                                     <span class="p-3">Parte 3</span>
                                                 </h4>
                                             </div>
@@ -602,12 +602,12 @@
                                 <br>
                                 <!--Introdução-->
                                     <span>
-                                        <h2 style="color: var(--bs-white); font-family: OpenSans-Bold; font-size: 1.6rem;">Características de pessoas resilientes e adaptáveis</h2>
+                                        <h2 style="color: var(--color-primaria); font-family: OpenSans-Bold; font-size: 1.6rem;">Características de pessoas resilientes e adaptáveis</h2>
                                     </span>
                                 <!--Introdução-->
                                 <br>
                                 <!-- Legenda -->
-                                <span style="color: var(--bs-white);font-family: OpenSans-Light; font-size: 1.2rem;">
+                                <span style="color: var(--color-Secundaria);font-family: OpenSans-Light; font-size: 1.2rem;">
                                     <p>Como vimos, ser <strong style="font-family: OpenSans-bold;">resiliente</strong> significa ter a capacidade </p>     
                                     <p>de superar dificuldades e adversidades, mantendo o </p>     
                                     <p>equilíbrio emocional, aprendendo com essas </p>     
@@ -685,7 +685,8 @@
             </section>
         <!--Container 02-->
         <!--Atividade 02-->
-            <section style="background: var(--Bs-Secundario);" class="container-xxl p-3">
+            <section style="background: var(--Bs-primaria);" class="container-xxl p-3">    
+                <br>
                 <article class="w-100 d-flex justify-content-center align-items-center">
                     <div style="color: var(--color-Secundaria);" class="w-100 d-flex flex-column justify-content-evenly align-items-center">
                         <!--Titulo-->
