--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
             </section>
         <!--Atividade 02-->
         <!--Container 02-->
-            <section style="background: var(--bs-terciaria);" class="container-xxl ">
+            <section style="background: var(--bs-Quarta);" class="container-xxl ">
                 <article class="d-flex">
                     <!-- Texto -->
                         <div class="w-50 d-flex justify-content-center flex-column align-items-center">
@@ -828,7 +828,7 @@
                                         <!-- Título -->
                                         <br><br>
                                             <div style="width: 35% !important;" class="d-flex justify-content-end align-items-end" >
-                                                <h4  style="color: var(--color-Secundaria); background: url(./img/icons/pleca1.webp); background-size: cover;font-family: PlayfairDisplay-Regular; background-position: center; font-size: 2rem; width: 150% !important;">
+                                                <h4  style="color: var(--color-Secundaria); background: url(./img/icons/pleca2.webp); background-size: cover;font-family: PlayfairDisplay-Regular; background-position: center; font-size: 2rem; width: 150% !important;">
                                                     <span class="p-3">Parte 4</span>
                                                 </h4>
                                             </div>
@@ -838,12 +838,12 @@
                                 <br>
                                 <!--Introdução-->
                                     <span>
-                                        <h2 style="color: var(--color-Secundaria); font-family: OpenSans-Bold; font-size: 1.6rem;">Alguns exemplos de resiliência e adaptabilidade</h2>
+                                        <h2 style="color: var(--bs-white); font-family: OpenSans-Bold; font-size: 1.6rem;">Alguns exemplos de resiliência e adaptabilidade</h2>
                                     </span>
                                 <!--Introdução-->
                                 <br>
                                 <!-- Legenda -->
-                                <span style="color: var(--color-Secundaria);font-family: OpenSans-Light; font-size: 1.2rem;">
+                                <span style="color: var(--bs-white);font-family: OpenSans-Light; font-size: 1.2rem;">
                                     <p>Como vimos, resiliência e adaptabilidade são</p>     
                                     <p>habilidades fundamentais em um mundo de </p>     
                                     <p>rápidas transformações. A globalização, o </p>     
@@ -884,7 +884,7 @@
             </section>
         <!--Container 02-->
         <!--Container 03-->
-            <section style="background: var(--Bs-Secundario);" class="container-xxl ">
+            <section style="background: var(--color-Secundaria);" class="container-xxl ">
                 <article class="d-flex">
                     <!--Img-->
                         <span class="w-50">
@@ -893,7 +893,7 @@
                     <!--Img-->
                     <!-- Texto -->
                         <div class="w-50 d-flex justify-content-center flex-column align-items-center">
-                            <div style="max-height: 500px; overflow-y: auto; padding: 10px; width: 78%;">
+                            <div style="max-height: 400px; overflow-y: auto; padding: 10px; width: 78%;">
                                 <!--Titulo-->
                                     <span style="gap: 1.5rem;" class="d-flex">
                                         <!--icons-->
@@ -914,38 +914,87 @@
                                 <br>
                                 <!--Introdução-->
                                     <span>
-                                        <h2 style="color: var(--color-Secundaria); font-family: OpenSans-Bold; font-size: 1.6rem;">Sendo resiliente e adaptável no dia a dia</h2>
+                                        <h2 style="color: var(--bs-white); font-family: OpenSans-Bold; font-size: 1.6rem;">Sendo resiliente e adaptável no dia a dia</h2>
                                     </span>
                                 <!--Introdução-->
                                 <br>
                                 <!-- Legenda -->
-                                <span style="color: var(--color-Secundaria);font-family: OpenSans-Light; font-size: 1.2rem;">
-                                    <p>Como vimos, resiliência e adaptabilidade são</p>     
-                                    <p>habilidades fundamentais em um mundo de </p>     
-                                    <p>rápidas transformações. A globalização, o </p>     
-                                    <p>avanço tecnológico e as mudanças nos modelos</p>     
-                                    <p>de estudo e trabalho têm desafiado as estruturas</p>     
-                                    <p>tradicionais e exigido, cada vez mais, </p>    
-                                    <p>profissionais preparados para lidar com </p>    
-                                    <p>incertezas, adversidades e mudanças </p>     
-                                    <p>constantes.</p>  
+                                <span style="color: var(--bs-white);font-family: OpenSans-Light; font-size: 1.2rem;">
+                                    <p>Resiliência e adaptabilidade são habilidades </p>     
+                                    <p>essenciais para enfrentar os desafios da vida,</p>     
+                                    <p>sendo especialmente relevantes na formação</p>     
+                                    <p>pessoal e profissional. Em um mundo repleto de</p>     
+                                    <p>mudanças rápidas e constantes, a capacidade de </p>     
+                                    <p>se adaptar e superar adversidades torna-se um</p>    
+                                    <p>diferencial que pode transformar dificuldades</p>    
+                                    <p>em oportunidades de aprendizado e crescimento.</p>    
                                         <br>   
-                                    <p>A partir de um programa de rádio, analise essas </p>     
-                                    <p>habilidades a partir de duas experiências </p>     
-                                    <p>diferentes</p>     
+                                    <p>No âmbito pessoal, a resiliência pode ajudá-lo a</p>     
+                                    <p>gerenciar emoções e lidar com frustrações de</p>     
+                                    <p>maneira mais equilibrada. Seja enfrentando um</p>     
+                                    <p>desempenho acadêmico abaixo do esperado,</p>
+                                    <p>conflitos interpessoais, seja em situações</p>
+                                    <p>desafiadoras no cotidiano, a resiliência</p>
+                                    <p>proporciona estabilidade emocional e evita que</p>
+                                    <p>essas circunstâncias gerem impactos negativos</p>
+                                    <p>prolongados. Essa habilidade também fortalece</p>
+                                    <p>a autoestima e a confiança, permitindo que o </p>
+                                    <p>indivíduo reconheça sua capacidade de superar</p>
+                                    <p>obstáculos e seguir em frente. Além disso, a</p>
+                                    <p>resiliência favorece a construção de</p>
+                                    <p>relacionamentos saudáveis, promovendo</p>
+                                    <p>empatia, diálogo construtivo e a habilidade de</p>
+                                    <p>resolver conflitos de maneira positiva.</p>
                                         <br>
-                                    <audio src="" controls></audio>
-                                        <br><br>    
-                                    <p>Desta forma, podemos finalizar este momento </p>     
-                                    <p>com diversas reflexões acerca das dimensões</p>   
-                                    <p>da resiliência e da adaptabilidade em nossas</p>
-                                    <p>vidas. Perguntas como: “Por que algumas </p>
-                                    <p>pessoas conseguem experimentar melhor a </p>
-                                    <p>resiliência e a adaptabilidade comparada a </p>
-                                    <p>outras pessoas?”. Assim, tais competências se</p>
-                                    <p>tornaram essenciais para as atividades exigidas</p>
-                                    <p>pelo mercado no século XXI.</p>  
+                                    <p>No campo profissional, a resiliência é</p>     
+                                    <p>igualmente indispensável. O mercado de</p>   
+                                    <p>trabalho exige alta capacidade de lidar com</p>
+                                    <p>pressão, metas ambiciosas e constantes</p>
+                                    <p>mudanças. Sendo assim, pessoas resilientes e</p>
+                                    <p>adaptáveis demonstram maior habilidade para</p>
+                                    <p>enfrentar essas exigências, preservando sua</p>
+                                    <p>saúde mental e mantendo a produtividade, além</p>
+                                    <p>de serem mais flexíveis ao encarar diferente</p> 
+                                    <p>pontos de vistas, adequarem-se a novos cenários</p>
+                                    <p>e lidarem com mudanças mais facilmente. Além</p>
+                                    <p>disso, pessoas resilientes e adaptáveis tendem a</p>
+                                    <p>receber críticas e feedbacks com maturidade,</p>
+                                    <p>encarando-os como oportunidades de melhoria,</p>
+                                    <p>e não como ameaças</p> 
                                         <br>
+                                    <p>Outro benefício é a capacidade de resolver</p>
+                                    <p>problemas de maneira criativa e eficiente,</p>
+                                    <p>característica altamente valorizadas em qualquer</p>
+                                    <p>área profissional. A perseverança diante de</p>
+                                    <p>rejeições ou falhas também impulsiona o</p>
+                                    <p>aprendizado contínuo, garantindo uma postura</p>
+                                    <p>proativa e comprometida com o</p>
+                                    <p>desenvolvimento.</p>
+                                        <br>
+                                    <p>Vale ressaltar que desenvolver comportamentos</p>
+                                    <p>e posturas resilientes e adaptáveis requer prática</p>
+                                    <p>e dedicação. Estratégias como o</p>
+                                    <p>autoconhecimento, o cultivo de uma rede de</p>
+                                    <p>apoio, a definição de metas realistas para o seu</p>
+                                    <p>desenvolvimento pessoal e profissional e a</p>
+                                    <p>adoção de hábitos saudáveis são fundamentais</p>
+                                    <p>para fortalecer essa habilidade. Ao praticar essas</p>
+                                    <p>atitudes, é possível não apenas aprimorar sua</p>
+                                    <p>capacidade de superar adversidades, mas</p>
+                                    <p>também para aproveitar as oportunidades que</p>
+                                    <p>surgirem ao longo de sua jornada pessoal e</p>
+                                    <p>profissional.</p>
+                                        <br>
+                                    <p>Em resumo, resiliência e adaptabilidade podem</p>
+                                    <p>auxiliar em um processo de transformação em</p>
+                                    <p>diferentes aspectos da vida, promovendo, assim,</p>
+                                    <p>o equilíbrio emocional e o bem-estar pessoal,</p>
+                                    <p>mas também impulsionando o sucesso</p>
+                                    <p>profissional, tornando o indivíduo mais</p>
+                                    <p>preparado para enfrentar um mundo em</p>
+                                    <p>constante evolução, cheio de mudanças e</p>
+                                    <p>ambientes de elevada exigência e constante</p>
+                                    <p>desenvolvimento.</p>
                                 </span>
                                 <!--Legenda-->
                             </div>
